k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: unity-web-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
