k8s/k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unity-web-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unity-web-service
  template:
    metadata:
      labels:
        app: unity-web-service
    spec:
      containers:
      - name: router
        image: brantcam/unity-web-service:v3
        imagePullPolicy: IfNotPresent
        #todo: move some of these to k8s secrets and add readiness/liveness probes
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /dbhealth
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /dbhealth
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 2
      - name: pg
        image: postgres:14.0
        volumeMounts:
        - mountPath: /var/lib/postgres/data
          name: postgres-db
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          exec:
            command: ["psql", "-w", "-U", "unity_user", "-d", "unity_db", "-c", "SELECT 1"]
          initialDelaySeconds: 15
          timeoutSeconds: 2
        livenessProbe:
          exec:
            command: ["psql", "-w", "-U", "unity_user", "-d", "unity_db", "-c", "SELECT 1"]
          initialDelaySeconds: 45
          timeoutSeconds: 2
        ports:
        - containerPort: 5432
      - name: queue
        image: nats-streaming:0.23.0-alpine3.14
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4222
      volumes:
      - name: postgres-db
        emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: unity-web-service
  ports:
  - name: router
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: pg
    protocol: TCP
    port: 5432
    targetPort: 5432

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    name: api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-service
            port: 
              number: 8080
